--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: .4s ;
+  background-color: #e0e0e0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+.InputWrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 50px;
+}
 .Test1 {
   position: absolute;
   top: 50%;
@@ -124,4 +131,11 @@ text-align: right;
   color: rgb(243, 96, 96);
   font-size: 12px;
   opacity: 0;
+}
+
+.LinksToPage {
+  position: fixed;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
