--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: 0.4s;
-  background-color: #e0e0e0;
+  background-color: #f3f3f3;
 }
 
 code {
@@ -133,6 +133,9 @@ p {
   position: fixed;
   bottom: 10px;
   left: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
   transform: translateX(-50%);
 }
 
