--- a/src/components/Example13/Example13.scss
+++ b/src/components/Example13/Example13.scss
@@ -3,6 +3,13 @@
   height: 100vh;
   overflow: hidden;
   // border: solid 1px green;
+  .logo_fun {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 150px;
+  }
   .ChoosePage {
     position: fixed;
     top: 0;
