--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: 0.4s;
-  background-color: #f3f3f3;
+  background-color: #f3f3f3 !important;
+}
+p,h1,h2,h3,img, a {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 code {
@@ -131,11 +137,13 @@ p {
 
 .LinksToPage {
   position: fixed;
-  bottom: 10px;
+  bottom: 5px;
   left: 50%;
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+
   transform: translateX(-50%);
 }
 
